MB-15512: marge bot basics