@@ -1,45 +1,39 @@
-import org.gradle.api.JavaVersion.VERSION_21
-import org.jetbrains.kotlin.gradle.dsl.JvmTarget.JVM_21
+import org.gradle.api.JavaVersion.VERSION_17
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 
 repositories {
   mavenCentral()
   maven("https://jitpack.io")
-  maven("https://repo.spring.io/milestone")
-  maven("https://repo.spring.io/snapshot")
 }
 plugins {
-  id("org.springframework.boot") version "3.4.0-SNAPSHOT"
-  id("io.spring.dependency-management") version "1.1.6"
   kotlin("jvm") version "2.0.20"
-  kotlin("plugin.spring") version "2.0.20"
 }
 dependencies {
-  implementation("org.springframework.boot:spring-boot-starter-web")
-  implementation("org.jetbrains.kotlin:kotlin-reflect")
-  testImplementation("org.springframework.boot:spring-boot-starter-test")
-  testImplementation("com.google.truth:truth:1.4.4")
-  testImplementation("io.mockk:mockk:1.13.12")
-  testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+  implementation("io.ktor:ktor-client-core:3.0.0")
+  implementation("io.ktor:ktor-client-cio:3.0.0")
+  implementation("ch.qos.logback:logback-classic:1.4.5")
+  implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0")
+  implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.9.0")
+  testImplementation("org.junit.jupiter:junit-jupiter:5.11.3")
+  testImplementation("com.google.truth:truth:1.1.3")
+  testImplementation("io.mockk:mockk:1.13.2")
 }
+
 java {
-  sourceCompatibility = VERSION_21
-  targetCompatibility = VERSION_21
+  sourceCompatibility = VERSION_17
+  targetCompatibility = VERSION_17
 }
 kotlin {
   compilerOptions {
-    jvmTarget = JVM_21
-    freeCompilerArgs.addAll(
-      "-Xjsr305=strict",
-      "-Xvalue-classes",
-      "-opt-in=kotlin.ExperimentalStdlibApi",
-      "-opt-in=kotlin.time.ExperimentalTime"
-    )
+    jvmTarget = JvmTarget.JVM_17
+    freeCompilerArgs.add("-opt-in=kotlin.time.ExperimentalTime")
   }
 }
-tasks.test {
-  useJUnitPlatform()
-  jvmArgs("--enable-preview")
-}
-tasks.bootJar {
-  archiveVersion.set("boot")
+tasks.jar {
+  isZip64 = true
+  manifest.attributes("Main-Class" to "AppKt")
+  configurations["compileClasspath"].forEach { file: File ->
+    from(zipTree(file.absoluteFile))
+  }
+  duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
